	PR middle-end/41429 	* tree-cfg.c (remove_useless_stmts_tc): Call gsi_next (gsi) even for 	GIMPLE_EH_MUST_NOT_THROW cleanup. 	(verify_types_in_gimple_stmt): Handle GIMPLE_EH_MUST_NOT_THROW.

* g++.dg/gomp/pr41429.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@151966 138bc75d-0d04-0410-961f-82ee72b054a4